feat: 打包模块修复