@@ -128,6 +128,17 @@
                         </excludes>
                     </configuration>
                 </plugin>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                  <source>20</source>
+                  <target>20</target>
+                  <compilerArgs>
+                    <arg>--enable-preview</arg>
+                  </compilerArgs>
+                </configuration>
+              </plugin>
             </plugins>
         </pluginManagement>
     </build>
